[metadata]
name='pii_crypt',
packages=['pii_crypt'],
version='1.0.2',
license='MIT',
description='Secures Personally Identifiable Information using AES (128/256 bit) key encryption.',
long_description = file: README.rst
long_description_content_type = text/x-rst; charset=UTF-8
author='Jay Milagroso',
author_email='j.milagroso@gmail.com',
url='https://github.com/jmilagroso/pii_crypt',
download_url='https://github.com/jmilagroso/pii_crypt/releases',
keywords=
    'PII',
    'AES',
    'Security'],
install_requires=['pycryptodome==3.10.1'],
classifiers=
    'Development Status :: 4 - Beta',
    'Intended Audience :: Developers',
    'Topic :: Software Development :: Build Tools',
    'License :: OSI Approved :: MIT License',
    'Programming Language :: Python :: 3.6',
    'Programming Language :: Python :: 3.7',
